--- a/www/css/style.css
+++ b/www/css/style.css
@@ -140,20 +140,27 @@ li {
 .tapbar a img {
     width: 80%;
     margin: 0 auto;
-    margin-bottom: 3px;
+    margin-bottom: 6px;
 }
 
-svg {
-    fill: currentColor;
-}
 
 .nav_active {
-    border-top: 3px solid #1A1035;
+    border-top: 5px solid #1F143D;
+}
+
+.nav_top {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    background-color: rgba(0,0,0,0.4);
 }
 
 .level {
     position: absolute;
-    top: 15px;
+    top: 10px;
     left: 20px;
 }
 
@@ -180,7 +187,7 @@ svg {
     display: flex;
     justify-content: center;
     align-items: center;
-    top: 20px;
+    top: 15px;
     right: 20px;
     width: 20px;
     height: 20px;
@@ -198,7 +205,7 @@ svg {
     display: none;
     top: 70px;
     width: 90%;
-    height: 20vh;
+    height: 17vh;
     background-color: white;
     border-radius: 2px;
 }
@@ -228,4 +235,81 @@ svg {
     width: 80%;
     font-size: 13px;
     font-family: Avenir;
+}
+
+.popup {
+    width: 100%;
+    background-color: #fff;
+    height: auto;
+    margin: 0 auto;
+}
+
+.left {
+    display: inline-block;
+    width: 40%;
+}
+
+.left img {
+    width: 100%;
+    display: inline-block;
+}
+
+.right {
+    float: right;
+    width: 55%;
+    margin-left: 10px;
+    font-family: Avenir;
+    font-size: 8px;
+}
+
+.right img {
+    width: 7px;
+    height: auto;
+}
+
+.right h2, h3, p{
+    margin-bottom: 2px;
+    margin-top: 2px;
+}
+
+.right h2 {
+    color: black;
+    text-align: left;
+    font-size: 13px;
+}
+
+.right h3 {
+    font-weight: lighter;
+}
+
+.right .container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.bottom {
+    display: inline-block;
+    width: 100%;
+}
+
+.bottom p {
+    float: left;
+    color: #362072;
+    font-weight: bolder;
+    font-family: Avenir;
+    font-size: 10px;
+}
+
+.bottom a {
+    float: right;
+    padding: 7px 25px;
+    background-color: #D8D8D8;
+    border-radius: 3px;
+    color: #362072;
+    font-size: 10px;
+    font-weight: bolder;
+    font-family: Avenir;
+    text-decoration: none;
+    text-transform: uppercase;
 }
