--- a/www/css/style.css
+++ b/www/css/style.css
@@ -22,9 +22,42 @@
 
 
 @font-face {
-    font-family: Avenir;
-    src: url(../font/avenir/AvenirLTStd-Medium.otf);
-}
+    font-family: 'AvenirMedium';
+    src: url('../font/AvenirLTStd-Medium.eot');
+    src: url('../font/AvenirLTStd-Medium.woff2') format('woff2'),
+         url('../font/AvenirLTStd-Medium.woff') format('woff'),
+         url('../font/AvenirLTStd-Medium.ttf') format('truetype'),
+         url('../font/AvenirLTStd-Medium.svg#AvenirLTStd-Medium') format('svg'),
+         url('../font/AvenirLTStd-Medium.eot?#iefix') format('embedded-opentype');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+  @font-face {
+    font-family: 'AvenirLight';
+    src: url('../font/AvenirLTStd-Light.eot');
+    src: url('../font/AvenirLTStd-Light.woff2') format('woff2'),
+         url('../font/AvenirLTStd-Light.woff') format('woff'),
+         url('../font/AvenirLTStd-Light.ttf') format('truetype'),
+         url('../font/AvenirLTStd-Light.svg#AvenirLTStd-Light') format('svg'),
+         url('../font/AvenirLTStd-Light.eot?#iefix') format('embedded-opentype');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+  @font-face {
+    font-family: 'AvenirBlack';
+    src: url('../font/AvenirLTStd-Black.eot');
+    src: url('../font/AvenirLTStd-Black.woff2') format('woff2'),
+         url('../font/AvenirLTStd-Black.woff') format('woff'),
+         url('../font/AvenirLTStd-Black.ttf') format('truetype'),
+         url('../font/AvenirLTStd-Black.svg#AvenirLTStd-Black') format('svg'),
+         url('../font/AvenirLTStd-Black.eot?#iefix') format('embedded-opentype');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+  
 
 
 body {
@@ -65,6 +98,8 @@ body {
     align-items: center;
     flex-direction: column;
     z-index: 5;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .app img {
@@ -74,13 +109,13 @@ body {
 .app .sous_titre {
     color: white;
     font-size: 12px;
-    font-family: Avenir;
+    font-family: 'AvenirMedium', sans-serif;
     font-weight: lighter;
     margin-top: 5px;
 }
 
 .app h2, h4 {
-    font-family: 'Avenir', sans-serif;
+    font-family: 'AvenirMedium', sans-serif;
     text-align: center;
     color: #fff;
 }
@@ -154,7 +189,7 @@ li {
     font-size: 7px;
     text-decoration: none;
     color: white;
-    font-family: Avenir, sans-serif;
+    font-family: 'AvenirMedium', sans-serif;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -180,17 +215,17 @@ li {
     left: 0;
     width: 100%;
     height: 50px;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0,0,0,0.5);
 }
 
 .level {
     position: absolute;
-    top: 10px;
-    left: 20px;
+    top: 5px;
+    left: 10px;
 }
 
 .level img {
-    width: 30px;
+    width: 40px;
 }
 
 .progress_bar {
@@ -203,63 +238,50 @@ li {
     color: black;
     font-size: 10px;
     text-align: center;
-    bottom: 8px;
-    font-family: Avenir;
+    bottom: 15px;
+    left: 5px;
+    font-family: 'AvenirMedium', sans-serif;
 }
 
-.info_white {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top: 15px;
+.progress_bar div {
+    width: 10px;
+    height: 12px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    background-color: #22E69E;
+}
+
+.choice {
+    position: relative;
+    float: right;
     right: 20px;
-    width: 20px;
-    height: 20px;
-    border-radius: 25px;
-    border: 2px solid white;
-    font-family: Avenir;
-    font-weight: bold;
+    top: 12px;
+}
+
+.liste, .plan {
+    display: inline-block;
+    color: black;
+    background-color: #fff;
+    font-size: 10px;
+    padding: 3px 5px;
+    font-family: 'AvenirLight', sans-serif;
+}
+
+.liste {
+    position: relative;
+    left: 5px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+.plan {
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.choice_active {
+    background-color: #362072;
     color: white;
-    text-align: center;
-    font-size: 12px;
-}
-
-.info_hidden {
-    position: absolute;
-    display: none;
-    top: 70px;
-    width: 90%;
-    height: 17vh;
-    background-color: white;
-    border-radius: 2px;
-}
-
-.info_purple {
-    position: relative;
-    display: inline-block;
-    bottom: 56px;
-    padding-top: 1px;
-    left: 20px;
-    width: 15px;
-    height: 15px;
-    border-radius: 25px;
-    border: 2px solid #301E5C;
-    font-family: Avenir;
-    font-weight: bold;
-    color: #301E5C;
-    text-align: center;
-    font-size: 8px;
-}
-
-.info_hidden p {
-    display: inline-block;
-    position: relative;
-    left: 30px;
-    top: 10px;
-    width: 80%;
-    font-size: 13px;
-    font-family: Avenir;
 }
 
 .popup {
@@ -283,7 +305,7 @@ li {
     float: right;
     width: 55%;
     margin-left: 10px;
-    font-family: Avenir;
+    font-family: 'AvenirMedium', sans-serif;
     font-size: 8px;
 }
 
@@ -322,7 +344,7 @@ li {
     float: left;
     color: #362072;
     font-weight: bolder;
-    font-family: Avenir;
+    font-family: 'AvenirMedium', sans-serif;
     font-size: 10px;
 }
 
@@ -334,7 +356,109 @@ li {
     color: #362072;
     font-size: 10px;
     font-weight: bolder;
-    font-family: Avenir;
+    font-family: 'AvenirMedium', sans-serif;
     text-decoration: none;
     text-transform: uppercase;
+}
+
+
+
+#map {
+    display: block;
+}
+
+
+
+/* CARD ACCUEIL */
+
+.place_container {
+    height: 100vh;
+    width: 100%;
+    background-color: #140D25;
+    padding-top: 80px;
+    display: none;
+}
+
+
+.place {
+    color: white;
+    font-family: 'AvenirMedium', sans-serif;
+    width: 95%;
+    height: 20vh;
+    position: relative;
+    margin: 0 auto;
+    -webkit-box-shadow: 0px 2px 7px 3px rgba(0,0,0,0.58);
+    -moz-box-shadow: 0px 2px 7px 3px rgba(0,0,0,0.58);
+    box-shadow: 0px 2px 7px 3px rgba(0,0,0,0.58);
+    margin-bottom: 15px;
+    display: none;
+}
+
+.card-top {
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+.by_who {
+    font-family: 'AvenirMedium', sans-serif;
+    margin-top: 15px;
+    padding: 5px 10px 5px 15px;
+    font-size: 13px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    float: left;
+    background: -moz-linear-gradient(45deg, #301e5c 0%, #311a75 55%, #3d2b75 99%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(45deg, #301e5c 0%,#311a75 55%,#3d2b75 99%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(45deg, #301e5c 0%,#311a75 55%,#3d2b75 99%);
+}
+
+.by_who p {
+    position: relative;
+    top: 2px;
+}
+
+.card-top ul {
+    float: right;
+    margin: 20px 25px 0 0;
+}
+
+.card-top ul li {
+    display: inline-block;
+    width: 15px;
+}
+
+.card-top ul li img{
+    width: 16px;
+}
+
+.card-bottom {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.card-bottom div {
+    float: left;
+    margin: 0 0 15px 25px;
+}
+
+.card-bottom div h2 {
+    font-size: 13px;
+}
+
+.card-bottom div h3 {
+    font-family: AvenirLight, sans-serif;
+    font-size: 11px;
+}
+
+.card-bottom div h3 img {
+    width: 9px;
+}
+
+.card-bottom p {
+    position: absolute;
+    bottom: 15px;
+    right: 25px;
+    font-size: 11px;
 }
