--- a/www/css/style.css
+++ b/www/css/style.css
@@ -171,7 +171,7 @@ body {
     width: 100%;
     height: 50px;
     background-color: #301E5C;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     right: 0;
     left: 0;
@@ -209,7 +209,7 @@ li {
 }
 
 .nav_top {
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 0;
     left: 0;
@@ -290,6 +290,7 @@ li {
     background-color: #fff;
     height: auto;
     margin: 0 auto;
+    border-radius: 4px;
 }
 
 .left {
@@ -300,6 +301,7 @@ li {
 .left img {
     width: 100%;
     display: inline-block;
+    padding: 10px 0 0 10px;
 }
 
 .right {
@@ -324,6 +326,7 @@ li {
     color: black;
     text-align: left;
     font-size: 13px;
+    margin-top: 10px;
 }
 
 .right h3 {
@@ -349,9 +352,10 @@ li {
 }
 
 .bottom {
-    display: inline-block;
-    width: 100%;
+    width: 95%;
+    margin: 0 auto;
     margin-top: 10px;
+    padding-bottom: 10px;
 }
 
 .bottom a {
@@ -511,4 +515,53 @@ li {
     font-family: AvenirLight, sans-serif;
     font-size: 13px;
     padding-right: 15px;
+}
+
+
+
+
+
+
+
+/* GALERIE */
+
+.galerie_container {
+    width: 100%;
+    min-height: 120vh;
+    background-color: #140D25;
+}
+
+.img-galerie-container {
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 0 auto;
+}
+
+.img-galerie .by_who_galerie {
+    font-family: 'AvenirMedium', sans-serif;
+    position: relative;
+    top: 200px;
+    color: white;
+    padding: 5px 10px 5px 15px;
+    font-size: 11px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    float: left;
+    background: -moz-linear-gradient(45deg, #301e5c 0%, #311a75 55%, #3d2b75 99%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(45deg, #301e5c 0%,#311a75 55%,#3d2b75 99%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(45deg, #301e5c 0%,#311a75 55%,#3d2b75 99%);
+}
+
+.img-galerie {
+    display: inline-block;
+    width:45%;
+    height:250px;
+    margin-bottom: 15px;
+}
+
+.img-galerie-mt {
+    margin-top: 130px;
 }
