--- a/www/css/style.css
+++ b/www/css/style.css
@@ -759,3 +759,68 @@ li {
     top: 0px;
     left: 200px;
 }
+
+
+
+.formulaire {
+    background-color: white;
+    border-radius: 4px;
+    font-family: AvenirMedium, sans-serif;
+    width: 85%;
+    margin: 0 auto;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+}
+
+.top_formulaire {
+    width: 60%;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 13px;
+}
+
+.top_formulaire img {
+    padding: 10px 0;
+}
+
+.top_formulaire h3 {
+    font-family: AvenirBlack, sans-serif;
+    padding-bottom: 10px;
+}
+
+.top_formulaire p {
+    font-size: 13px;
+}
+
+.formulaire form {
+    display: flex;
+    width: 80%;
+    margin: 0 auto;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.formulaire form label {
+    color: #200440;
+    font-size: 13px;
+    padding-top: 20px;
+}
+
+.formulaire form input {
+    padding-top: 5px;
+}
+
+.formulaire form a {
+    display: inline-block;
+    background-color: #35206E;
+    color: white;
+    margin: 0 auto;
+    text-decoration: none;
+    font-family: AvenirLight, sans-serif;
+    font-size: 14px;
+    padding: 10px 100px;
+    border-radius: 4px;
+    margin: 10px 0 20px 0;
+}
